--- a/taskmaster/app/src/main/res/values/strings.xml
+++ b/taskmaster/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="settings">Settings</string>
     <string name="update_username">Update Username</string>
     <string name="my_tasks_list">My Tasks List</string>
+    <string name="status">Status</string>
 </resources>
